# TAstic

./: .gitignore  README.md  setup.py  tastic
docs/: Makefile  conf.py  index.rst  intro.rst  libtastic.rst  overview.rst
libtastic/: compare.py  init.py  tastic.py
libtastic/common/: assignment.py  configuration.py  minhash.py
libtastic/core/: assignment.py  configuration.py  minhash.py  subcommand.py
server/: stack.yaml  tastic-server.cabal  tastic_db  test.py
server/src/: Config.hs  Hashes.hs  Main.hs  SQL.hs
tastic/: client.py  init.py  minhash.py  tastic  tastic.py
tastic/common/: assignment.py  configuration.py  error.py  minhash.py
tastic/resources/: default.yaml
