name:                tastic-server
version:             0.1.0
synopsis:            A server for the tastic similarity detection system.
description:         Please see README.md
homepage:            https://github.com/ikuehne/tastic
license:             GPL3
license-file:        LICENSE
author:              Ian Kuehne
maintainer:          ikuehne@caltech.edu
copyright:           2016 Ian Kuehne
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tastic-server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Config
                     , Hashes
                     , SQL
  build-depends:       base >= 4.7 && < 5
                     , binary >= 0.7 && < 0.8
                     , warp >= 3.2 && < 3.3
                     , wai >= 3.2 && < 3.3
                     , http-types >= 0.9 && < 1.0
                     , sqlite-simple >= 0.4 && < 0.5
                     , bytestring >= 0.10 && < 0.11
                     , mtl >= 2.2 && < 2.3
                     , text >= 1.2 && < 1.3
                     , transformers >= 0.4 && < 0.5
